--- a/CleanArchMvc.WebUI/Views/Categories/Index.cshtml
+++ b/CleanArchMvc.WebUI/Views/Categories/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<CleanArchMvc.Application.DTOs.CategoryDTO>
 
 @{
-    ViewData["Title"] = "Categories Management";
+    ViewData["Title"] = "Gerenciador de categorias";
 }
 
 <div>
@@ -13,7 +13,7 @@
         <div>
             <div class="pull-left">
                 <a asp-action="Create" class="btn btn-primary">
-                    <span title="Register New" class="fas fa-plus"></span> Register New
+                    <span title="Register New" class="fas fa-plus"></span> Novo Registro
                 </a>
             </div>
         </div>
@@ -38,16 +38,16 @@
                         @Html.DisplayFor(modelItem => item.Name)
                     </td>
                     <td>
-                        <a asp-action="Edit" asp-route-id="@item.Id" title="Edit" class="btn btn-warning">
-                            <span class="fas fa-edit">Edit</span>
+                        <a asp-action="Edit" asp-route-id="@item.Id" title="Editar" class="btn btn-warning">
+                            <span class="fas fa-edit">Editar</span>
                         </a>
 
-                        <a asp-action="Details" asp-route-id="@item.Id" title="Details" class="btn btn-primary">
-                            <span class="fas fa-search">Details</span>
+                        <a asp-action="Details" asp-route-id="@item.Id" title="Detalhes" class="btn btn-primary">
+                            <span class="fas fa-search">Detalhes</span>
                         </a>
 
-                        <a asp-action="Delete" asp-route-id="@item.Id" title="Delete" class="btn btn-danger">
-                            <span class="fas fa-trash-alt">Delete</span>
+                        <a asp-action="Delete" asp-route-id="@item.Id" title="Excluir" class="btn btn-danger">
+                            <span class="fas fa-trash-alt">Excluir</span>
                         </a>
                     </td>
                 </tr>
