--- a/CleanArchMvc.WebUI/Views/Products/Index.cshtml
+++ b/CleanArchMvc.WebUI/Views/Products/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<CleanArchMvc.Application.DTOs.ProductDTO>
 
 @{
-    ViewData["Title"] = "Products Management";
+    ViewData["Title"] = "Gerenciador de produtos";
 }
 <style>
     .modal-lg {
@@ -17,7 +17,7 @@
         <div>
             <div class="pull-left">
                 <a asp-action="Create" class="btn btn-primary">
-                    <span title="Register New" class="fas fa-plus"></span> Register New
+                    <span title="Register New" class="fas fa-plus"></span> Novo Registro
                 </a>
             </div>
         </div>
@@ -54,14 +54,14 @@
                         @Html.DisplayFor(modelItem => item.Price)
                     </td>
                     <td>
-                        <a asp-action="Edit" asp-route-id="@item.Id" title="Edita" class="btn btn-warning">
-                            <span class="fas fa-edit">Edit</span>
+                        <a asp-action="Edit" asp-route-id="@item.Id" title="Editar" class="btn btn-warning">
+                            <span class="fas fa-edit">Editar</span>
                         </a>
-                        <a asp-action="Details" asp-route-id="@item.Id" title="Details" class="btn btn-primary">
-                            <span class="fas fa-search">Details</span>
+                        <a asp-action="Details" asp-route-id="@item.Id" title="Detalhes" class="btn btn-primary">
+                            <span class="fas fa-search">Detalhes</span>
                         </a>
-                        <a asp-action="Delete" asp-route-id="@item.Id" title="Deleta" class="btn btn-danger">
-                            <span class="fas fa-trash-alt">Delete</span>
+                        <a asp-action="Delete" asp-route-id="@item.Id" title="Excluir" class="btn btn-danger">
+                            <span class="fas fa-trash-alt">Excluir</span>
                         </a>
                     </td>
                 </tr>
